# Tuesday

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
Tuesday/: Foundation.py  Tuesday.py  __init__.py
